--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -277,7 +277,7 @@ Full-Width Styles
 }
 
 #header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+  padding: 50px 10px 0px 10px;
 }
 
 #project_title {
@@ -294,6 +294,7 @@ Full-Width Styles
   font-weight: 300;
   background: none;
   text-shadow: #111 0px 0px 10px;
+  margin-top: 20px;
 }
 
 #downloads {
